--- a/py_course/oops.ipynb
+++ b/py_course/oops.ipynb
@@ -2619,7 +2619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2632,9 +2632,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<__main__.sample object at 0x000001FD86190AF0>\n",
+      "<__main__.sample object at 0x000001FD86182440>\n"
+     ]
+    },
     {
      "ename": "TypeError",
      "evalue": "unsupported operand type(s) for +: 'sample' and 'sample'",
@@ -2642,7 +2650,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Shaik Imran\\OneDrive\\Documents\\GitHub\\BASIC_PYTHON\\py_course\\oops.ipynb Cell 78\u001b[0m line \u001b[0;36m3\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#Y140sZmlsZQ%3D%3D?line=0'>1</a>\u001b[0m a\u001b[39m=\u001b[39msample(\u001b[39m150\u001b[39m)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#Y140sZmlsZQ%3D%3D?line=1'>2</a>\u001b[0m b\u001b[39m=\u001b[39msample(\u001b[39m250\u001b[39m)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#Y140sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(a\u001b[39m+\u001b[39;49mb)\n",
+      "\u001b[1;32mc:\\Users\\Shaik Imran\\OneDrive\\Documents\\GitHub\\BASIC_PYTHON\\py_course\\oops.ipynb Cell 78\u001b[0m line \u001b[0;36m5\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#Y140sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mprint\u001b[39m(a)\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#Y140sZmlsZQ%3D%3D?line=3'>4</a>\u001b[0m \u001b[39mprint\u001b[39m(b)\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/oops.ipynb#Y140sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mprint\u001b[39m(a\u001b[39m+\u001b[39;49mb) \u001b[39m#user difined class objects can't be performed any operation(+,-,*,/,//,.....) we have to use magic methods to overcome this\u001b[39;00m\n",
       "\u001b[1;31mTypeError\u001b[0m: unsupported operand type(s) for +: 'sample' and 'sample'"
      ]
     }
@@ -2650,7 +2658,9 @@
    "source": [
     "a=sample(150)\n",
     "b=sample(250)\n",
-    "print(a+b)"
+    "print(a)\n",
+    "print(b)\n",
+    "print(a+b) #user difined class objects can't be performed any operation(+,-,*,/,//,.....) we have to use magic methods to overcome this"
    ]
   },
   {
@@ -2669,6 +2679,7 @@
     }
    ],
    "source": [
+    "#operator overloading\n",
     "class sample:\n",
     "    def __init__(self,x):\n",
     "        self.x=x\n",
@@ -2709,16 +2720,23 @@
     "comparison operators\n",
     "== -->   __eq__(self,other)\n",
     "!= -->   __ne__(self,other)\n",
-    "!= -->   __ne__(self,other)\n",
-    "!= -->   __ne__(self,other)\n",
-    "!= -->   __ne__(self,other)\n",
+    "<  -->   __lt__(self,other)\n",
+    ">  -->   __gt__(self,other)\n",
+    "<= -->   __le__(self,other)\n",
+    ">= -->   __ge__(self,other)\n",
     "\n",
     "\n",
     "assignment operators\n",
     "+=  --> __iadd__(self,other)\n",
-    "+=  --> __iadd__(self,other)\n",
-    "+=  --> __iadd__(self,other)\n",
-    "+=  --> __iadd__(self,other)\n",
+    "-=  --> __isub__(self,other)\n",
+    "*=  --> __imul__(self,other)\n",
+    "/=  --> __idiv__(self,other)\n",
+    "//=  --> __ifloordiv__(self,other)\n",
+    "%=  --> __imod__(self,other)\n",
+    "**=  --> __ipow__(self,other)\n",
+    "&=  --> __iand__(self,other)\n",
+    "|=  --> __ior__(self,other)\n",
+    "^=  --> __ixor__(self,other)\n",
     "\n",
     "uninary operators\n",
     "-  --> __neg__(self)\n",
@@ -2817,6 +2835,209 @@
     "           1.abc is nothing but abstract module\n",
     "           2.ABC is nothing but abstract_parent_class\n",
     "           3.abc_class is nothing but userdefine abstract_class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "25/11/2023 (absent)\n",
+    "exeption handling:\n",
+    "Try:\n",
+    "    . It is a block that  contains the set of statements which causes the abrupt termination of the program or the statement where an exception might arise.\n",
+    "    . Whatever statement is arriving the error those statements we should write inside the try block.\n",
+    "    . The try block handles/finds the exception and it is intimate to the exception(except) block then the exception block is active.\n",
+    "    . When an exception is raised to handle it smoothly we write the remedial statements inside a block caleed except.\n",
+    "Except:\n",
+    "    . It contains the remedial statements that state what to do when an exception arrives in the try block.\n",
+    "    . The except blocks are divided into three types:\n",
+    "        1 Specific except block\n",
+    "        2 Generic except block\n",
+    "        3 Default except block\n",
+    "\n",
+    "    1. Specific except block:\n",
+    "        It can handle only the specific type of exception.\n",
+    "\n",
+    "        syntax:\n",
+    "                except specific_exception_name:\n",
+    "                                |\n",
+    "                                |statements\n",
+    "                                |\n",
+    "    example:\n",
+    "                print('start')\n",
+    "                a='hello'\n",
+    "                try:\n",
+    "                    for i in range(0,100):\n",
+    "                        print(a[i])\n",
+    "                except IndexError:\n",
+    "                    print('here small error is there')\n",
+    "                print('end')\n",
+    "            Note: it handles only IndexError.\n",
+    "            specific except blocks are written before generic or default except blocks.\n",
+    "    2. Generic except block:\n",
+    "        It can handle the software/application/program type of exception.\n",
+    "        This block contains Exception as the name of the exception class, which is the parent class for all the application/software/program related exceptions.\n",
+    "        syntax:\n",
+    "                except Exception:\n",
+    "                                |\n",
+    "                                |statements\n",
+    "                                |\n",
+    "        example:\n",
+    "                print('start')\n",
+    "                a='hello'\n",
+    "                try:\n",
+    "                    for i in range(0,100):\n",
+    "                        print(a[i])\n",
+    "                except Exception:    \n",
+    "                    print('here small error is there')\n",
+    "                print('end')\n",
+    "            Note: it will handles only application/software/program exception, it will not accept hardware/system excetions.\n",
+    "                generic except block is written after all the specific except blocks.\n",
+    "\n",
+    "    3. Default except block:\n",
+    "        It can handle any type of exception.(either software or system)\n",
+    "        This block contains all types of Exceptions.\n",
+    "        We are not going to specify the type of exception but this van handle every type of exception.\n",
+    "\n",
+    "        syntax:\n",
+    "                except:\n",
+    "                    |\n",
+    "                    |statements\n",
+    "                    |\n",
+    "    example:\n",
+    "                print('start')\n",
+    "                try:\n",
+    "                    for i in range(0,100):\n",
+    "                        print([i])\n",
+    "                except :\n",
+    "                    print('here small error is there')\n",
+    "                print('end')\n",
+    "                in abave programe is execute perfectly but when execution time we press ctrl+c then it raise the key interrupt exception\n",
+    "            Note: it handles any type of execption.\n",
+    "            Default except block is written after all the except blocks.\n",
+    "Finally:\n",
+    "    It is one type of exception block.\n",
+    "    This finally block executes whether the exception is raised or not but this finally block is executed.\n",
+    "\n",
+    "    syntax:\n",
+    "            except:\n",
+    "                |\n",
+    "                |statements\n",
+    "                |\n",
+    "    example:\n",
+    "            print('start')\n",
+    "            try:\n",
+    "                for i in range(0,100):\n",
+    "                    print(i)\n",
+    "            except:\n",
+    "                print('here small error is there')\n",
+    "            finally:\n",
+    "                print('end')\n",
+    "\n",
+    "    example: for all except blocks:\n",
+    "            print('start')\n",
+    "            try:\n",
+    "                a='hello'\n",
+    "                for i in range(0,150):\n",
+    "                    print(i)\n",
+    "            except IndexError:    \n",
+    "                print('specific exception')\n",
+    "            except Exception:\n",
+    "                print('generic exception')\n",
+    "            except:\n",
+    "                print('default excetion')\n",
+    "            finally:\n",
+    "                print('stop')\n",
+    "    Note: if in case we are using all the types of except blocks in our programs. We should follow the precedence of the except block.\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "BaseException\n",
+    "+-- SystemExit\n",
+    "+-- KeyboardInterrupt\n",
+    "+-- GeneratorExit\n",
+    "+--Exception\n",
+    "    +-- StopIteration\n",
+    "    +-- StopAsyncIteration\n",
+    "    +-- ArithmeticError\n",
+    "    |   +-- FloatingPointError\n",
+    "    |   +--OverflowError\n",
+    "    |   +--ZeroDivisionError\n",
+    "    +-- AssertionError\n",
+    "    +-- AttributeError\n",
+    "    +-- BufferError\n",
+    "    +-- EoFError\n",
+    "    +-- ImportError\n",
+    "        +-- ModuleNotFoundError\n",
+    "    +-- LookupError\n",
+    "        +-- IndexError\n",
+    "        +-- KeyError\n",
+    "    +-- MemoryError\n",
+    "    +-- NameError\n",
+    "        +-- UnboundLocalError\n",
+    "    +-- OSError\n",
+    "        +-- BlockingIOError\n",
+    "        +-- ChildProcessError\n",
+    "        +-- ConnectionError\n",
+    "            +-- BrokenPipeError\n",
+    "            +-- ConnectionAbortedError\n",
+    "            +-- ConnectionRefusedError\n",
+    "            +-- ConnectionResetError\n",
+    "        +-- FileExistsError\n",
+    "        +-- FileNotFoundError\n",
+    "        +-- InterruptedError\n",
+    "        +-- IsADirectoryError\n",
+    "        +-- NotADirectoryError\n",
+    "        +-- PermissionError\n",
+    "        +-- ProcessLookupError\n",
+    "        +-- TimeoutError\n",
+    "    +-- ReferenceError\n",
+    "    +-- RuntimeError\n",
+    "        +-- NotImplementedError\n",
+    "        +-- RecursionError\n",
+    "    +-- SystaxError\n",
+    "        +-- IndentationError\n",
+    "            +-- TabError\n",
+    "    +-- SystemError\n",
+    "    +-- TyptError\n",
+    "    +-- ValueError\n",
+    "        +-- UnicodeError\n",
+    "            +-- UnicodeDecodeError\n",
+    "            +-- UnicodeEncodeError\n",
+    "            +-- UnicodeTranslateError\n",
+    "    +-- Warning\n",
+    "        +-- DeprecationWarning\n",
+    "        +-- PendingDeprecationWarning\n",
+    "        +-- RuntimeWarning\n",
+    "        +-- SyntaxWarning\n",
+    "        +-- UserWarning\n",
+    "        +-- FutureWarning\n",
+    "        +-- ImportWarning\n",
+    "        +-- UnicodeWarning\n",
+    "        +-- BytesWarning\n",
+    "        +-- EncodingWarning\n",
+    "        +-- ResourceWarning"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Trowing the exception based on the user requirement:\n",
+    "\n",
+    "Raise:\n",
+    "    -----------"
    ]
   },
   {
