--- a/py_course/sql_con/file1.ipynb
+++ b/py_course/sql_con/file1.ipynb
@@ -188,19 +188,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(1, 'imran', 21, 'imran@gmail.com', 878789252, 'hyd', 77)\n",
-      "(2, 'gopi', 26, 'kumar@gmail.com', 878781235, 'hyd', 98)\n",
-      "(3, 'khan', 23, 'khan@gmail.com', 934543432, 'hyd', 67)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def fetch_record():\n",
     "    query='''select * from student'''\n",
@@ -212,17 +202,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 row created\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "def update_record(sid,phone,marks):\n",
     "    query='''update student set phone=? , marks=? where sid=?'''\n",
@@ -259,9 +241,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 row created\n"
+     ]
+    }
+   ],
    "source": [
     "def main():\n",
     "    m=int(input('choose the option:\\n1:insert\\n2:fetch\\n3:update\\n:delete\\n5:exit'))\n",
@@ -286,7 +276,7 @@
     "        case __:\n",
     "            return\n",
     "    \n",
-    "    main()\n",
+    "    # main()\n",
     "main()\n"
    ]
   }
