--- a/py_course/multithredding/multitheding.ipynb
+++ b/py_course/multithredding/multitheding.ipynb
@@ -64,21 +64,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'threading' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\Shaik Imran\\OneDrive\\Documents\\GitHub\\BASIC_PYTHON\\py_course\\multithredding\\multitheding.ipynb Cell 4\u001b[0m line \u001b[0;36m9\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/multithredding/multitheding.ipynb#W5sZmlsZQ%3D%3D?line=2'>3</a>\u001b[0m \u001b[39mfrom\u001b[39;00m \u001b[39mthreading\u001b[39;00m \u001b[39mimport\u001b[39;00m \u001b[39m*\u001b[39m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/multithredding/multitheding.ipynb#W5sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39m# obj=Thread(target= ,args=)\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/multithredding/multitheding.ipynb#W5sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39m# target => function Name\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/multithredding/multitheding.ipynb#W5sZmlsZQ%3D%3D?line=6'>7</a>\u001b[0m \u001b[39m# args   => arguments of those function\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/multithredding/multitheding.ipynb#W5sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m \u001b[39m# to know current thread---\u001b[39;00m\n\u001b[1;32m----> <a href='vscode-notebook-cell:/c%3A/Users/Shaik%20Imran/OneDrive/Documents/GitHub/BASIC_PYTHON/py_course/multithredding/multitheding.ipynb#W5sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mthe current working thread is :\u001b[39m\u001b[39m'\u001b[39m,threading\u001b[39m.\u001b[39mcurrentThread())\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'threading' is not defined"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "#syntax\n",
     "# from threading import Thread #or \n",
@@ -223,22 +211,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "document is downloadingopen with\n",
-      "\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "document is downloaded\n"
+      "document is downloading\n",
+      "document is downloaded\n",
+      "open with\n"
      ]
     }
    ],
@@ -247,7 +229,7 @@
     "from threading import *\n",
     "def download():\n",
     "    print('document is downloading')\n",
-    "    time.sleep(5)\n",
+    "    # time.sleep(5)\n",
     "    print('document is downloaded')\n",
     "\n",
     "def notification():\n",
@@ -284,10 +266,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "77\n",
+      "1\n",
+      "78\n",
+      "79\n",
+      "2\n",
+      "80\n",
+      "81\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n",
+      "4\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Q1\n",
+    "import time\n",
+    "from threading import *\n",
+    "class MyThread(Thread):\n",
+    "    def run(self):\n",
+    "        for i in range(1,5):\n",
+    "            time.sleep(2)\n",
+    "            print(i)\n",
+    "t=MyThread()\n",
+    "t.start()\n",
+    "\n",
+    "for i in range(77,82):\n",
+    "    time.sleep(1)\n",
+    "    print(i)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sq 64\n",
+      "sq 36\n",
+      "sq 4\n",
+      "cube 512\n",
+      "cube 216\n",
+      "cube 8\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Q2\n",
+    "import time\n",
+    "from threading import *\n",
+    "l=[1,8,5,6,2]\n",
+    "class sq(Thread):\n",
+    "    def run(self):\n",
+    "        for i in l:\n",
+    "            if i%2==0:\n",
+    "                print('sq',i**2)\n",
+    "\n",
+    "class cube(Thread):\n",
+    "    def run(self):\n",
+    "        for i in l:\n",
+    "            if i%2==0:\n",
+    "                print('cube',i**3)\n",
+    "\n",
+    "t1=sq()\n",
+    "t2=cube()\n",
+    "t1.start()\n",
+    "t2.start()"
+   ]
   }
  ],
  "metadata": {
