--- a/py_course/regular_expresions/regular_exp.ipynb
+++ b/py_course/regular_expresions/regular_exp.ipynb
@@ -2,6 +2,131 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['H', 'G', 'M', 'K']\n",
+      "HGMK\n"
+     ]
+    }
+   ],
+   "source": [
+    "s='Hello Good Morning Kgf123'\n",
+    "# for i in s:\n",
+    "#     if 'A'<=i<='Z': \n",
+    "#         print(i)\n",
+    "# for i in s:\n",
+    "#     print(i.upper(),end='')\n",
+    "#using regular expressions\n",
+    "import re\n",
+    "res=re.findall('[A-Z]',s)\n",
+    "print(res)\n",
+    "\n",
+    "print(''.join(res)) #we have to join the all charactors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['e', 'l', 'l', 'o', 'o', 'o', 'd', 'o', 'r', 'n', 'i', 'n', 'g', 'g', 'f']\n",
+      "ellooodorninggf\n"
+     ]
+    }
+   ],
+   "source": [
+    "#to get lower case\n",
+    "s='Hello Good Morning Kgf123'\n",
+    "import re\n",
+    "res=re.findall('[a-z]',s)\n",
+    "print(res)\n",
+    "\n",
+    "print(''.join(res)) #we have to join the all charactors"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['1', '2', '3']\n",
+      "123\n"
+     ]
+    }
+   ],
+   "source": [
+    "#to get all numbers\n",
+    "s='Hello Good Morning Kgf123'\n",
+    "import re\n",
+    "res=re.findall('[0-9]',s)\n",
+    "print(res)\n",
+    "\n",
+    "print(''.join(res))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['e']\n",
+      "e\n"
+     ]
+    }
+   ],
+   "source": [
+    "#to get specific character\n",
+    "s='Hello Good Morning Kgf123'\n",
+    "import re\n",
+    "res=re.findall('e',s)\n",
+    "print(res)\n",
+    "\n",
+    "print(''.join(res))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[' ', ' ', ' ']\n",
+      "   \n"
+     ]
+    }
+   ],
+   "source": [
+    "#to get space character\n",
+    "s='Hello Good Morning Kgf123'\n",
+    "import re\n",
+    "res=re.findall(' ',s)\n",
+    "print(res)\n",
+    "\n",
+    "print(''.join(res))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
    "outputs": [
@@ -214,6 +339,35 @@
     "res=re.findall('[^aeiouAEIOU]',s)   #returns the characters apart from specified\n",
     "print(res)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dfsskl\tdsfs\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "'dfsskl\\tdsfs'"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "a='dfsskl\\tdsfs'\n",
+    "print(a)\n",
+    "a"
    ]
   }
  ],
