--- a/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/practice.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/practice.ipynb
@@ -247,17 +247,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "None\n",
       "True\n",
-      "b'101'\n",
+      "None\n",
       "10\n",
+      "b'101'\n",
       "(10, 20)\n"
      ]
     }
@@ -1119,7 +1119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -1128,7 +1128,7 @@
        "range(0, 10)"
       ]
      },
-     "execution_count": 51,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1199,7 +1199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -1208,7 +1208,7 @@
        "[-1, -2, -3, -4, -5, -6, -7, -8, -9]"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1384,6 +1384,26 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[5, 4, 3, 2, 1]"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(5,0,-1))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 103,
    "metadata": {},
    "outputs": [
@@ -1453,6 +1473,26 @@
     "l1=list(filter(lambda x:x%2==0,l))\n",
     "\n",
     "print(\"even numbers:\",l1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[0, 1, 2, 3, 4]"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "list(range(0,5,1))"
    ]
   },
   {
