--- a/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/patterns.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/patterns.ipynb
@@ -203,6 +203,301 @@
     "    print('* '*i)\n",
     "    n-=1"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#06/12/2023"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* * * * * \n",
+      "* * * * * \n",
+      "* * * * * \n",
+      "* * * * * \n",
+      "* * * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "for r in range(1,6):\n",
+    "    for c in range(1,6):\n",
+    "        print('*',end=' ')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 3 5 7 9 11 \n",
+      "1 3 5 7 9 11 \n",
+      "1 3 5 7 9 11 \n"
+     ]
+    }
+   ],
+   "source": [
+    "for r in range(1,4):\n",
+    "    for c in range(1,12,2):\n",
+    "        print(c,end=' ')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 \n",
+      "1 2 \n",
+      "1 2 3 \n",
+      "1 2 3 4 \n",
+      "1 2 3 4 5 \n"
+     ]
+    }
+   ],
+   "source": [
+    "for r in range(1,6):\n",
+    "    for c in range(1,r+1):\n",
+    "        print(c,end=' ')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5 4 3 2 1 \n",
+      "5 4 3 2 \n",
+      "5 4 3 \n",
+      "5 4 \n",
+      "5 \n"
+     ]
+    }
+   ],
+   "source": [
+    "for r in range(1,6):\n",
+    "    for c in range(5,r-1,-1):\n",
+    "        print(c,end=' ')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* \n",
+      "* * \n",
+      "* * * \n",
+      "* * * * \n",
+      "* * * * * \n",
+      "* * * * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "for r in range(1,7):\n",
+    "    for c in range(1,r+1):\n",
+    "        print('*',end=' ')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* * * * \n",
+      "* * * \n",
+      "* * \n",
+      "* \n"
+     ]
+    }
+   ],
+   "source": [
+    "for r in range(1,5):\n",
+    "    for c in range(4,r-1,-1):\n",
+    "        print('*',end=' ')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "\n",
+      "\n",
+      "\n",
+      "* * * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "#logic 1\n",
+    "for r in range(1,6):\n",
+    "    if r==5:\n",
+    "        for c in range(1,6):\n",
+    "            print('*',end=' ')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          \n",
+      "          \n",
+      "          \n",
+      "          \n",
+      "* * * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "#logic 2\n",
+    "for r in range(1,6):\n",
+    "    for c in range(1,6):\n",
+    "        if r==5:\n",
+    "            print('*',end=' ')\n",
+    "        else:\n",
+    "            print(' ',end=' ')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* * * * * \n",
+      "    *     \n",
+      "    *     \n",
+      "    *     \n",
+      "    *     \n",
+      "    *     \n",
+      "    *     \n"
+     ]
+    }
+   ],
+   "source": [
+    "# for r in range(1,8):\n",
+    "#     for c in range(1,6):\n",
+    "#         if 1==r:\n",
+    "#             print('*',end=' ')\n",
+    "#         elif c==3:\n",
+    "#             print('*',end=' ')\n",
+    "#         else:\n",
+    "#             print(' ',end=' ')\n",
+    "#     print()\n",
+    "\n",
+    "for r in range(1,8):\n",
+    "    for c in range(1,6):\n",
+    "        if 1==r or c==3:\n",
+    "            print('*',end=' ')\n",
+    "        else:\n",
+    "            print(' ',end=' ')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* * * * * \n",
+      "* * * * \n",
+      "* * * \n",
+      "* * \n",
+      "* \n"
+     ]
+    }
+   ],
+   "source": [
+    "for r in range(1,6):\n",
+    "    for c in range(5,r-1,-1):\n",
+    "        print('*',end=' ')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* * * * * \n",
+      "  * * * * \n",
+      "    * * * \n",
+      "      * * \n",
+      "        * \n"
+     ]
+    }
+   ],
+   "source": [
+    "for r in range(1,6):\n",
+    "    for c in range(1,6):\n",
+    "        if r<=c:\n",
+    "            print('*',end=' ')\n",
+    "        else:\n",
+    "            print(' ',end=' ')\n",
+    "    print()"
+   ]
   }
  ],
  "metadata": {
