--- a/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/patterns.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/patterns.ipynb
@@ -498,6 +498,44 @@
     "            print(' ',end=' ')\n",
     "    print()"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* * * * * * * * * * \n",
+    "* * * *     * * * * \n",
+    "* * *         * * * \n",
+    "* *             * * \n",
+    "*                 * "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* * * * * * * * * * \n",
+      "\n",
+      "\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "for r in range(1,6):\n",
+    "    for c in range(1,11):\n",
+    "        if r==1:\n",
+    "            print('*',end=' ')\n",
+    "        else:\n",
+    "            pass\n",
+    "    print()"
+   ]
   }
  ],
  "metadata": {
