--- a/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/assignment.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/assignment.ipynb
@@ -830,6 +830,84 @@
     "        break\n",
     "    i+=1\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "WAP to find the longest substring without repeating characters in a given string.\n",
+    "For example, if “javaconceptoftheday” is the input string, then the longest substring without repeating or duplicate characters is “oftheday“."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "oftheday\n"
+     ]
+    }
+   ],
+   "source": [
+    "#111\n",
+    "#i/p:“javaconceptoftheday”\n",
+    "c='javaconceptoftheday'\n",
+    "sub=str()\n",
+    "sub1=str()\n",
+    "i=0\n",
+    "while i<len(c):\n",
+    "    if c[i] not in sub:\n",
+    "        sub=sub+c[i]\n",
+    "    else:\n",
+    "        if len(sub)>len(sub1):\n",
+    "            sub1=sub\n",
+    "        j=0\n",
+    "        while j<len(sub1):\n",
+    "            if sub1[j]==c[i]:\n",
+    "                sub=sub1[j+1:]\n",
+    "                break\n",
+    "            j+=1\n",
+    "        sub=sub+c[i]\n",
+    "    i+=1\n",
+    "print(sub)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "oftheday\n"
+     ]
+    }
+   ],
+   "source": [
+    "#111\n",
+    "#i/p:“javaconceptoftheday”\n",
+    "c='javaconceptoftheday'\n",
+    "sub=str()\n",
+    "sub1=str()\n",
+    "for i in range(0,len(c)):\n",
+    "    if c[i] not in sub:\n",
+    "        sub=sub+c[i]\n",
+    "    else:\n",
+    "        if len(sub)>len(sub1):\n",
+    "            sub1=sub\n",
+    "        for j in range(len(sub1)):\n",
+    "            if sub1[j]==c[i]:\n",
+    "                sub=sub1[j+1:]\n",
+    "                break\n",
+    "        sub=sub+c[i]\n",
+    "print(sub)\n"
+   ]
   }
  ],
  "metadata": {
