--- a/py_course/functional_pro/food_court.ipynb
+++ b/py_course/functional_pro/food_court.ipynb
@@ -57,7 +57,16 @@
     "        self.pin=pin\n",
     "        self.c_iid()\n",
     "        self.c_idd=100+hotel.c_id\n",
-    "        self.c_detailss(self.c_idd,self)\n",
+    "        self."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "c_detailss(self.c_idd,self)\n",
     "    @classmethod\n",
     "    def c_iid(cls):\n",
     "        cls.c_id+=1  \n",
