--- a/py_course/functional_pro/test.ipynb
+++ b/py_course/functional_pro/test.ipynb
@@ -2,114 +2,106 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 40,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "{'st_name': 'khan_sab', 'phone': 9123456784, 'email': 'khan@gmail.com', 'address': 'vizag', 'mark1': 77, 'mark2': 789, 'mark3': 97, 'rollno': 101}\n"
+      "{'e_name': 'name2', 'e_phone': '340469', 'e_salary': 110, 'e_address': '1.24/b village', 'e_domain': 'developer', 'e_email': 'developer@gmail.com', 'id': 2}\n"
      ]
     }
    ],
    "source": [
-    "class student:\n",
-    "    school_name='brilliant school'\n",
-    "    s_address='hyd'\n",
-    "    s_phone=1077\n",
-    "    s_details={}\n",
-    "    no_students=0\n",
-    "    def __init__(self,st_name,phone,email,address,mark1,mark2,mark3):\n",
-    "        self.st_name=st_name\n",
-    "        self.phone=phone\n",
-    "        self.email=email\n",
-    "        self.address=address\n",
-    "        self.mark1=mark1\n",
-    "        self.mark2=mark2\n",
-    "        self.mark3=mark3\n",
-    "        self.no_of_students()\n",
-    "        self.rollno=100+self.no_students\n",
-    "        self.add_std(self.rollno,self)\n",
+    "class company:\n",
+    "    c_name='dsff'\n",
+    "    c_address='lkj;l'\n",
+    "    c_phone=78964546\n",
+    "    details={}\n",
+    "    no_of_employes=0\n",
+    "    def __init__(self,e_name,e_phone,e_salary,e_address,e_domain,e_email):\n",
+    "        self.e_name=e_name\n",
+    "        self.e_phone=e_phone\n",
+    "        self.e_salary=e_salary\n",
+    "        self.e_address=e_address\n",
+    "        self.e_domain=e_domain\n",
+    "        self.e_email=e_email\n",
+    "        company.no_of_employes+=1\n",
+    "        self.id=company.no_of_employes\n",
+    "        company.add_detail(self)\n",
     "\n",
     "    @classmethod\n",
-    "    def add_std(cls,rollno,self):\n",
-    "        cls.s_details[rollno]=self\n",
+    "    def add_detail(cls,self):\n",
+    "        cls.details[self.id]=self\n",
     "\n",
     "    @classmethod\n",
-    "    def no_of_students(cls):\n",
-    "        cls.no_students+=1\n",
-    "\n",
-    "    @classmethod\n",
-    "    def change_school_phone(cls):\n",
-    "        cls.s_phone=int(input('enter new phone number'))\n",
-    "\n",
-    "    def modify_marks(self):\n",
-    "        val=int(input('1.mark1\\n2.mark2\\n3.mark3'))\n",
-    "        match val:\n",
-    "            case 1:\n",
-    "                self['mark1']=int(input('enter marks1'))\n",
-    "            case 2:\n",
-    "                self['mark2']=int(input('enter marks2'))\n",
-    "            case 3:\n",
-    "                self['mark3']=int(input('enter marks3'))\n",
-    "        print(self)\n",
-    "\n",
+    "    def detailss(cls):\n",
+    "        for i in cls.details:\n",
+    "            print(cls.details[i].__dict__)\n",
+    "    \n",
+    "    def salary_hike(self):\n",
+    "        self.e_salary=(self.e_salary+((10*100)//self.e_salary))\n",
+    "        self.add_detail(self)\n",
+    "        print(self.__dict__)\n",
     "    @staticmethod\n",
-    "    def calculateTotal():\n",
-    "        print('rollno'.center(15),'student_name'.center(15),'Total_marks'.center(15))\n",
-    "        for i in student.s_details:\n",
-    "            j=student.s_details[i].__dict__\n",
-    "            t=j['mark1']+j['mark2']+j['mark3']\n",
-    "            name=j['st_name']\n",
-    "            print(f'{i}'.center(15),f'{name}'.center(15),f'{t}'.center(15))\n",
-    "    @staticmethod\n",
-    "    def Studentdetails():\n",
-    "        for i in student.s_details:\n",
-    "            j=student.s_details[i].__dict__\n",
-    "            print(j)\n",
+    "    def notice():\n",
+    "        print('well come')\n",
     "\n",
-    "    @staticmethod\n",
-    "    def spe_studentdetails():\n",
-    "        val=input('enter student name')\n",
-    "        for i in student.s_details:\n",
-    "            j=student.s_details[i].__dict__\n",
-    "            t=j['st_name']\n",
-    "            if val==t:\n",
-    "                print(j)\n",
+    "obj1=company('name1','340209',100,'3.24/b village','manager','manager@gmail.com')\n",
+    "obj2=company('name2','340469',100,'1.24/b village','developer','developer@gmail.com')\n",
     "\n",
-    "    @staticmethod\n",
-    "    def change_phone():\n",
-    "        val=int(input('enter new number:'))\n",
-    "        student.s_phone=val\n",
-    "        print(student.s_phone)\n",
-    "       \n",
-    "\n",
-    "khan=student('khan_sab',9123456784,'khan@gmail.com','vizag',77,87,97)\n",
-    "khan2=student('projj',9123456784,'khan@gmail.com','vizag',77,87,97)\n",
-    "def school():\n",
-    "    val=int(input('1.calsulate Total\\n2.displayStudentDetails\\n3.Display_specific_student\\n4.modify_marks\\n5.Change_school_phone'))\n",
-    "    match val:\n",
-    "        case 1:\n",
-    "            student.calculateTotal()\n",
-    "        case 2:\n",
-    "            student.Studentdetails()\n",
-    "        case 3:\n",
-    "            student.spe_studentdetails()\n",
-    "        case 4:\n",
-    "            val=int(input('enter your roll_No'))\n",
-    "            for i in student.s_details:\n",
-    "                j=student.s_details[i].__dict__\n",
-    "                t=j['rollno']\n",
-    "                if t==val:\n",
-    "                    student.modify_marks(j)\n",
-    "                    break\n",
-    "\n",
-    "\n",
-    "        case 5:\n",
-    "            student.change_phone()\n",
-    "school()\n",
-    "# print(student.s_phone)\n"
+    "def run():\n",
+    "    a=input('1.details\\n 2.salary hike\\n 3.notice')\n",
+    "    match a:\n",
+    "        case '1':\n",
+    "            company.detailss()\n",
+    "        \n",
+    "        case '2':\n",
+    "            s=int(input('enter id'))\n",
+    "            if s in company.details:\n",
+    "                \n",
+    "                company.salary_hike(company.details[s])\n",
+    "        case '3':\n",
+    "            company.notice()\n",
+    "        case __:\n",
+    "            print('select anything')\n",
+    "run()\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "5\n",
+      "8\n",
+      "13\n",
+      "21\n",
+      "34\n"
+     ]
+    }
+   ],
+   "source": [
+    "#2.febonaci\n",
+    "f=0\n",
+    "s=1\n",
+    "for i in range(1,10):\n",
+    "    if i<=1:\n",
+    "        res=i\n",
+    "    else:\n",
+    "        res=f+s\n",
+    "        f,s=s,res\n",
+    "    print(res)\n"
    ]
   }
  ],
