--- a/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/patterns.ipynb
+++ b/py_course/flow_control_statements/2.itaration&Looping_statements/For_loop/patterns.ipynb
@@ -450,42 +450,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* * * * * \n",
-      "* * * * \n",
-      "* * * \n",
-      "* * \n",
-      "* \n"
+      "5 4 3 2 1 \n",
+      "5 4 3 2 \n",
+      "5 4 3 \n",
+      "5 4 \n",
+      "5 \n"
      ]
     }
    ],
    "source": [
     "for r in range(1,6):\n",
     "    for c in range(5,r-1,-1):\n",
-    "        print('*',end=' ')\n",
+    "        print(c,end=' ')\n",
     "    print()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "* * * * * \n",
-      "  * * * * \n",
-      "    * * * \n",
-      "      * * \n",
-      "        * \n"
+      "1 2 3 4 5 \n",
+      "  2 3 4 5 \n",
+      "    3 4 5 \n",
+      "      4 5 \n",
+      "        5 \n"
      ]
     }
    ],
@@ -493,7 +493,7 @@
     "for r in range(1,6):\n",
     "    for c in range(1,6):\n",
     "        if r<=c:\n",
-    "            print('*',end=' ')\n",
+    "            print(c,end=' ')\n",
     "        else:\n",
     "            print(' ',end=' ')\n",
     "    print()"
@@ -512,7 +512,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -520,20 +520,128 @@
      "output_type": "stream",
      "text": [
       "* * * * * * * * * * \n",
-      "\n",
-      "\n",
-      "\n",
-      "\n"
+      "* * * *     * * * * \n",
+      "* * *         * * * \n",
+      "* *             * * \n",
+      "*                 * \n"
      ]
     }
    ],
    "source": [
     "for r in range(1,6):\n",
     "    for c in range(1,11):\n",
-    "        if r==1:\n",
+    "        if r+c<=6 or c-r>=5:\n",
     "            print('*',end=' ')\n",
     "        else:\n",
-    "            pass\n",
+    "            print(' ',end=' ')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 2 3 4 5 6 7 8 9 10 \n",
+      "1 2 3 4     7 8 9 10 \n",
+      "1 2 3         8 9 10 \n",
+      "1 2             9 10 \n",
+      "1                 10 \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,6):\n",
+    "    for j in range(1,11):\n",
+    "        if j+i<=6 or j-i>=5:\n",
+    "            print(j,end=' ')\n",
+    "        else: \n",
+    "            print(' ',end=' ')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    *     \n",
+      "    *     \n",
+      "* * * * * \n",
+      "    *     \n",
+      "    *     \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,6):\n",
+    "    for j in range(1,6):\n",
+    "        if i==3 or j==3:\n",
+    "            print('*',end=' ')\n",
+    "        else:\n",
+    "            print(' ', end=' ')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "* * * * * \n",
+      "*       * \n",
+      "*       * \n",
+      "*       * \n",
+      "* * * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,6):\n",
+    "    for j in range(1,6):\n",
+    "        if i==1 or i==5 or j==1 or j==5:\n",
+    "            print('*',end=' ')\n",
+    "        else:\n",
+    "            print(' ', end=' ')\n",
+    "    print()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "*         \n",
+      "*         \n",
+      "*         \n",
+      "*         \n",
+      "* * * * * \n"
+     ]
+    }
+   ],
+   "source": [
+    "for i in range(1,6):\n",
+    "    for j in range(1,6):\n",
+    "        if i==5 or j==1:\n",
+    "            print('*',end=' ')\n",
+    "        else:\n",
+    "            print(' ', end=' ')\n",
     "    print()"
    ]
   }
